--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>One Page Wonder - Start Bootstrap Template</title>
+  <title>Pam & Kyle Wedding 2021</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vvendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,17 +27,20 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <a class="navbar-brand" href="#">Pam & Kyle 2021</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Sign Up</a>
+            <a class="nav-link" href="#ceremonySection">Ceremony</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Log In</a>
+            <a class="nav-link" href="#receptionSection">Reception</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#registrySection">Registries</a>
           </li>
         </ul>
       </div>
@@ -47,9 +50,8 @@
   <header class="masthead text-center text-white">
     <div class="masthead-content">
       <div class="container">
-        <h1 class="masthead-heading mb-0">One Page Wonder</h1>
-        <h2 class="masthead-subheading mb-0">Will Rock Your Socks Off</h2>
-        <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
+        <h1 class="masthead-heading mb-0">Pamela Nelson & Kyle Sellers</h1>
+        <h2 class="masthead-subheading mb-0">May 15th 2021</h2>
       </div>
     </div>
     <div class="bg-circle-1 bg-circle"></div>
@@ -59,6 +61,7 @@
   </header>
 
   <section>
+    <a name="ceremonySection"></a>
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
@@ -68,8 +71,8 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">For those about to rock...</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            <h2 class="display-4">Ceremony</h2>
+            <p>May 15th at 2:00pm at Riverside Ranch, 175 Pearson Ln, McCall, ID 83638</p>
           </div>
         </div>
       </div>
@@ -77,6 +80,7 @@
   </section>
 
   <section>
+    <a name="receptionSection"></a>
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6">
@@ -86,8 +90,8 @@
         </div>
         <div class="col-lg-6">
           <div class="p-5">
-            <h2 class="display-4">We salute you!</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            <h2 class="display-4">Reception</h2>
+            <p>Following ceremony at Donnelly Bible Church, 159 Fw Gestrin St, Donnelly, ID 83615</p>
           </div>
         </div>
       </div>
@@ -95,6 +99,7 @@
   </section>
 
   <section>
+    <a name="registrySection"></a>
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
@@ -104,8 +109,11 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">Let there be rock!</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            <h2 class="display-4">Wedding Gift Registires</h2>
+            <p>Celebrating this new chapter with our loved ones is the most wonderful gift we could ask for. However, for your convenience, we have registered at a couple stores listed below.</p>
+            <a href="https://www.target.com/gift-registry/giftgiver?registryId=b3e2807785e64599b58cda6fb08e2fb3">Target</a>
+            <br>
+            <a href="https://www.bedbathandbeyond.com/store/giftregistry/viewregistryguest/549874275?eventType=Wedding">Bed Bath and Beyond</a>
           </div>
         </div>
       </div>
@@ -115,7 +123,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-black">
     <div class="container">
-      <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 text-center text-white small">Pam & Kyle 2021</p>
     </div>
     <!-- /.container -->
   </footer>
