added contact section

--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Pam & Kyle 2021</a>
+      <a class="navbar-brand" href="#">Pam & Kyle 2021 Wedding</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,6 +41,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#registrySection">Registries</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contactSection">Contact</a>
           </li>
         </ul>
       </div>
@@ -114,6 +117,25 @@
             <a href="https://www.target.com/gift-registry/giftgiver?registryId=b3e2807785e64599b58cda6fb08e2fb3">Target</a>
             <br>
             <a href="https://www.bedbathandbeyond.com/store/giftregistry/viewregistryguest/549874275?eventType=Wedding">Bed Bath and Beyond</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <a name="contactSection"></a>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div class="p-5">
+            <img class="img-fluid rounded-circle" src="img/04.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="p-5">
+            <h2 class="display-4">Contact</h2>
+            <p>Contact Pam at (208)630-4264 or Kyle at (208)315-0216 to RSVP. We know these times are complicated. Please feel no pressure to attend.</p>
           </div>
         </div>
       </div>
