spelling error fixed

--- a/home.html
+++ b/home.html
@@ -112,7 +112,7 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">Wedding Gift Registires</h2>
+            <h2 class="display-4">Wedding Gift Registries</h2>
             <p>Celebrating this new chapter with our loved ones is the most wonderful gift we could ask for. However, for your convenience, we have registered at a couple stores listed below.</p>
             <a href="https://www.target.com/gift-registry/giftgiver?registryId=b3e2807785e64599b58cda6fb08e2fb3">Target</a>
             <br>
